# UUVC

./: .gitignore  eval.txt  inference.py  inference_exact_pitch.py  loss.py  make_data_vctk.py  pyproject.toml  requirements.txt  s2u.py  s2u_manual_kmeans.py  train.py  trainer.py
data/: dataset.py  sampler.py
models/: s2rv.py  transformers.py  u2mel.py  utils.py  vp.py
textlesslib/examples/gslm/: sample.py
textlesslib/examples/speaker_probing/: probes.py  train.py
textlesslib/tests/: test_checkpoint_manager.py  test_model_handling.py  test_quantized_dataset.py
textlesslib/textless/: __init__.py
textlesslib/textless/checkpoint_manager/: __init__.py  manager.py
textlesslib/textless/data/: cpc_feature_reader.py  f0_preprocess.py  hubert_feature_reader.py  kmeans_quantizer.py  quantized_datasets.py  speech_encoder.py
textlesslib/textless/vocoders/tacotron2/: __init__.py  audio_processing.py  cleaners.py  cmudict.py  glow.py  layers.py  model.py  numbers.py  symbols.py  text.py  tts_data.py  utils.py  vocoder.py  waveglow_denoiser.py
textlesslib/tools/distributed_transcribe/: data_handler.py  distributed.py  transcribe.py
vocoder/: meldataset.py  models.py  train.py  utils.py  vocoder.py
