[tool.poetry]
name = "uuvc"
version = "1.0.0"
description = "A unified one-shot prosody and speaker conversion system with self-supervised discrete speech units"
authors = ["Li-Wei Chen <liweiche@altali.speech.cs.cmu.edu>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
torchvision = "^0.14.0"
torchaudio = "^0.13.0"
pytorch-lightning = "^1.8.3"
transformers = "^4.24.0"
librosa = "^0.9.2"
pyloudnorm = "^0.1.0"
torch = "^1.13.0"
fairseq = "^0.12.2"
matplotlib = "^3.6.2"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"
ssort = "^0.11.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
